# CLionRedPencilDemo

./: .gitignore  CMakeLists.txt  README.md
lib/gtest-1.7.0/fused-src/gtest/: gtest-all.cc  gtest_main.cc
src/: CMakeLists.txt  Product.cpp  Product.h  RulesEngine.cpp  RulesEngine.h
test/: CMakeLists.txt  RedPencilPromotionTest.cpp
